Fix content vs. sidebar spacing on mobile

--- a/assets/css/lsx.css
+++ b/assets/css/lsx.css
@@ -812,9 +812,9 @@ body { background-color: #F6F6F6; }
 
 .archive-header-wrapper .archive-header .archive-title { margin: 0; }
 
-.content-area, .widget-area { padding-bottom: 8.5rem; padding-top: 8.5rem; }
+.content-area, .widget-area { margin-bottom: 8.5rem; margin-top: 8.5rem; }
 
-.home .content-area, .home .widget-area { padding-bottom: 0; padding-top: 0; }
+.home .content-area, .home .widget-area { margin-bottom: 0; margin-top: 0; }
 
 .content-area { z-index: 4; }
 
